src/test/deca/context/invalid/created/decl_class/redefinition_method_badcount.deca
// Description :
//    redéfinition signature pas le meme nombre de param
// Resultats :
//		Erreur contextuelle
//    	Ligne 12

class A{
void meth(int x){}
}

class B extends A{
void meth(int x, int y){}
}